# nutrition-rag-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: pipeline.yaml
openspec/changes/archive/2026-04-14-nutrition-rag-pipeline-suite/: design.md  proposal.md  tasks.md
openspec/specs/chat/: spec.md
openspec/specs/embedding/: spec.md
openspec/specs/generation/: spec.md
openspec/specs/ingestion/: spec.md
openspec/specs/monitoring/: spec.md
openspec/specs/retrieval/: spec.md
src/nutrition_rag/: __init__.py
src/nutrition_rag/api/: app.py  schemas.py
src/nutrition_rag/api/static/: index.html
src/nutrition_rag/core/: config.py  models.py
src/nutrition_rag/pipelines/chat/: failure_recovery.py  long_term_memory.py  memory_injector.py  orchestrator.py  rate_limiter.py  short_term_memory.py
src/nutrition_rag/pipelines/embedding/: batch_embedder.py  cache.py  hot_swap.py  registry.py  validator.py
src/nutrition_rag/pipelines/generation/: citation.py  disclaimer.py  guardrails.py  medical_refusal.py  prompt_builder.py  streamer.py
src/nutrition_rag/pipelines/ingestion/: chunker.py  cleaner.py  enricher.py  error_handler.py  orchestrator.py  vector_store.py
src/nutrition_rag/pipelines/monitoring/: alerting.py  business_metrics.py  daily_report.py  generation_metrics.py  retrieval_metrics.py  trace_logger.py
src/nutrition_rag/pipelines/retrieval/: context_filter.py  hybrid_search.py  multi_turn.py  personalization.py  reranker.py
tests/: test_e2e.py
(+11 files in other folders)
