[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-rag"
version = "0.1.0"
description = "Nutrition RAG pipeline suite for semantic search and retrieval over food composition databases"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.30",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    "pandas>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
embedding-extras = [
    "langchain-cohere>=0.1.0",
    "langchain-voyageai>=0.1.0",
    "sentence-transformers>=2.3.0",
    "pytesseract>=0.3.10",
]
eval = [
    "ragas>=0.1.0",
    "deepeval>=0.20.0",
]
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
